<resources>
    <string name="app_name">Clone App</string>
    <string name="wait">Please wait…</string>
    <string name="preparing">Opening the app…</string>
    <string name="delete">Delete</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="clone_apps">Clone Apps</string>
    <string name="external_storage">External Storage</string>


    <!--  menu item names -->
    <string name="theme_store">Theme Store</string>
    <string name="speed_mode">Speed Mode</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="rate_us">Rate us Google Play</string>
    <string name="language">Language</string>
    <string name="about">About</string>

     your admob banner and intestitial id
    <string name="banner_id">ca-app-pub-6082480373395183/7720256584</string>
    <string name="admob_interstitial">ca-app-pub-6082480373395183/8884152684</string>

    <!--<string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

    <!-- your facebook id  -->
    <string name="facebook_app_id">342831946325557</string>
    <!--change true to false to disable the HompPage -->
    <string name="homepage">true</string>
    <!--put your share message here -->
    <string name="sharebutton">Download "Clone App" on google play : </string>
    <string name="delete_apps">Delete Apps</string>
    <string name="do_you_want_to_delete">Do you want to delete</string>
    <string name="hi">Hi</string>
    <string name="need_to_install_google_service">We found that your device has been installed the Google service, whether you need to install them?</string>
    <string name="find_it_in_setting">You can also find it in the Settings~</string>
    <string name="notice">Notice: </string>
    <string name="speed_mode_string1">1. Enable this can speed up Clone app running.</string>
    <string name="speed_mode_string2">2. Enable this can reduce save battery consumption.</string>

</resources>

























































































