<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_menu"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/cardview_light_background"
                />

        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/lenearadview"
                >
                <FrameLayout
                    android:id="@+id/theme_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/theme_0">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/home_launcher"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipToPadding="false"
                            android:scrollbars="vertical"
                            tools:listitem="@layout/item_launcher_app" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/btn_add"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/icon_plus"
                        android:scaleType="fitXY"
                        android:layout_gravity="bottom|right"
                        />

                    <com.kcm.cloneapp.widgets.TwoGearsView
                        android:id="@+id/pb_loading_app"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp" />
                </FrameLayout>
                <LinearLayout
                    android:id="@+id/bottom_area"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|center"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/create_shortcut_area"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_shortcut" />

                        <TextView
                            android:id="@+id/create_shortcut_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:padding="5dp"
                            android:text="@string/create_shortcut"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/delete_app_area"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:src="@drawable/ic_crash" />

                        <TextView
                            android:id="@+id/delete_app_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start"
                            android:padding="5dp"
                            android:text="@string/delete"
                            android:textColor="@android:color/white" />
                    </LinearLayout>


                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/lenearadview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/cardview_light_background"
                >
                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/banner_id">

                </com.google.android.gms.ads.AdView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_view"
        android:background="#dfdada"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>




